mdapi/Custom/objects/Service_Request_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Average_Score__c</fullName>
        <formula>(Score_Overall_Scheduling_Process__c +   Score_Overall_QoS__c  +   Score_Overall_Problem_Resolve_Process__c  +  Score_Rate_Your_Technician_Vendor__c) / 4</formula>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Follow_Up_was_Completed__c</fullName>
        <label>Date Follow Up was Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Survey_was_Taken__c</fullName>
        <label>Date Survey was Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Follow_Up__c</fullName>
        <label>Date of First Follow Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_Mgmt_need_to_contact_you__c</fullName>
        <label>Does Mgmt. need to contact you?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Comments__c</fullName>
        <label>Follow Up Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Status__c</fullName>
        <label>Follow Up Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Follow Up Necessary</fullName>
                </value>
                <value>
                    <fullName>Needs Follow Up</fullName>
                </value>
                <value>
                    <fullName>Follow Up in Progress</fullName>
                </value>
                <value>
                    <fullName>Follow Up Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Problem_Resolve_Process__c</fullName>
        <label>Overall Problem Resolve Process?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_QoS__c</fullName>
        <label>Overall QoS?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Scheduling_Process__c</fullName>
        <label>Overall Scheduling Process?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_your_Technician_Vendor__c</fullName>
        <label>Rate your Technician/Vendor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_Friends_and_Family__c</fullName>
        <label>Recommend Friends and Family?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Likely</fullName>
                </value>
                <value>
                    <fullName>Not Decided</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Very Likely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resident_Email__c</fullName>
        <formula>Service_Request__r.Resident_Email__c</formula>
        <label>Resident Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_First_Name__c</fullName>
        <formula>Service_Request__r.Resident_First_Name__c</formula>
        <label>Resident First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Last_Name__c</fullName>
        <formula>Service_Request__r.Resident_Last_Name__c</formula>
        <label>Resident Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Overall_Problem_Resolve_Process__c</fullName>
        <formula>IF( ISPICKVAL( Overall_Problem_Resolve_Process__c , &apos;Poor&apos;), 1,  IF( ISPICKVAL(Overall_Problem_Resolve_Process__c , &apos;Fair&apos;), 2,  IF( ISPICKVAL(Overall_Problem_Resolve_Process__c , &apos;Good&apos;), 3,  IF( ISPICKVAL(Overall_Problem_Resolve_Process__c , &apos;Very Good&apos;), 4,  IF( ISPICKVAL(Overall_Problem_Resolve_Process__c , &apos;Excellent&apos;), 5, 0) ) ) ) )</formula>
        <label>Score - Overall Problem Resolve Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Overall_QoS__c</fullName>
        <formula>IF( ISPICKVAL( Overall_QoS__c , &apos;Poor&apos;), 1,  IF( ISPICKVAL(Overall_QoS__c , &apos;Fair&apos;), 2,  IF( ISPICKVAL(Overall_QoS__c , &apos;Good&apos;), 3,  IF( ISPICKVAL(Overall_QoS__c , &apos;Very Good&apos;), 4,  IF( ISPICKVAL(Overall_QoS__c , &apos;Excellent&apos;), 5, 0) ) ) ) )</formula>
        <label>Score - Overall QoS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Overall_Scheduling_Process__c</fullName>
        <formula>IF( ISPICKVAL(Overall_Scheduling_Process__c, &apos;Poor&apos;), 1,  IF( ISPICKVAL(Overall_Scheduling_Process__c, &apos;Fair&apos;), 2,  IF( ISPICKVAL(Overall_Scheduling_Process__c, &apos;Good&apos;), 3,  IF( ISPICKVAL(Overall_Scheduling_Process__c, &apos;Very Good&apos;), 4,  IF( ISPICKVAL(Overall_Scheduling_Process__c, &apos;Excellent&apos;), 5, 0) ) ) ) )</formula>
        <label>Score - Overall Scheduling Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Rate_Your_Technician_Vendor__c</fullName>
        <formula>IF( ISPICKVAL( Rate_your_Technician_Vendor__c , &apos;Poor&apos;), 1,  IF( ISPICKVAL(Rate_your_Technician_Vendor__c, &apos;Fair&apos;), 2,  IF( ISPICKVAL(Rate_your_Technician_Vendor__c, &apos;Good&apos;), 3,  IF( ISPICKVAL(Rate_your_Technician_Vendor__c, &apos;Very Good&apos;), 4,  IF( ISPICKVAL(Rate_your_Technician_Vendor__c, &apos;Excellent&apos;), 5, 0) ) ) ) )</formula>
        <label>Score - Rate Your Technician/Vendor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <label>Service Request</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Service Request Surveys</relationshipLabel>
        <relationshipName>Service_Request_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Service Request Survey</label>
    <listViews>
        <fullName>All_Service_Request_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Service_Request__c</columns>
        <columns>Overall_Problem_Resolve_Process__c</columns>
        <columns>Overall_QoS__c</columns>
        <columns>Overall_Scheduling_Process__c</columns>
        <columns>Rate_your_Technician_Vendor__c</columns>
        <columns>Recommend_Friends_and_Family__c</columns>
        <columns>Does_Mgmt_need_to_contact_you__c</columns>
        <columns>Follow_Up_Status__c</columns>
        <columns>Additional_Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resident_First_Name__c</columns>
        <columns>Resident_Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Request Surveys</label>
    </listViews>
    <listViews>
        <fullName>Service_Reqs_Best_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Service_Request__c</columns>
        <columns>Additional_Comments__c</columns>
        <columns>Overall_Problem_Resolve_Process__c</columns>
        <columns>Overall_QoS__c</columns>
        <columns>Overall_Scheduling_Process__c</columns>
        <columns>Rate_your_Technician_Vendor__c</columns>
        <columns>Recommend_Friends_and_Family__c</columns>
        <columns>Resident_Email__c</columns>
        <columns>Resident_First_Name__c</columns>
        <columns>Resident_Last_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Overall_Problem_Resolve_Process__c</field>
            <operation>equals</operation>
            <value>Very Good,Excellent</value>
        </filters>
        <filters>
            <field>Overall_QoS__c</field>
            <operation>equals</operation>
            <value>Very Good,Excellent</value>
        </filters>
        <filters>
            <field>Overall_Scheduling_Process__c</field>
            <operation>equals</operation>
            <value>Very Good,Excellent</value>
        </filters>
        <filters>
            <field>Rate_your_Technician_Vendor__c</field>
            <operation>equals</operation>
            <value>Very Good,Excellent</value>
        </filters>
        <filters>
            <field>Recommend_Friends_and_Family__c</field>
            <operation>equals</operation>
            <value>Likely,Very Likely</value>
        </filters>
        <label>Service Reqs: Best Reviews</label>
    </listViews>
    <listViews>
        <fullName>Service_Reqs_Review_for_Improvement</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Service_Request__c</columns>
        <columns>Overall_Problem_Resolve_Process__c</columns>
        <columns>Overall_QoS__c</columns>
        <columns>Overall_Scheduling_Process__c</columns>
        <columns>Rate_your_Technician_Vendor__c</columns>
        <columns>Recommend_Friends_and_Family__c</columns>
        <columns>Additional_Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Resident_Email__c</columns>
        <columns>Resident_First_Name__c</columns>
        <columns>Resident_Last_Name__c</columns>
        <columns>Does_Mgmt_need_to_contact_you__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Overall_Problem_Resolve_Process__c</field>
            <operation>equals</operation>
            <value>Poor,Fair</value>
        </filters>
        <filters>
            <field>Overall_QoS__c</field>
            <operation>equals</operation>
            <value>Poor,Fair</value>
        </filters>
        <filters>
            <field>Overall_Scheduling_Process__c</field>
            <operation>equals</operation>
            <value>Poor,Fair</value>
        </filters>
        <filters>
            <field>Rate_your_Technician_Vendor__c</field>
            <operation>equals</operation>
            <value>Poor,Fair</value>
        </filters>
        <filters>
            <field>Recommend_Friends_and_Family__c</field>
            <operation>equals</operation>
            <value>Not Likely,Not Decided</value>
        </filters>
        <label>Service Reqs: Review for Improvement</label>
    </listViews>
    <listViews>
        <fullName>Service_Requests_Need_Follow_up_contact</fullName>
        <columns>NAME</columns>
        <columns>Service_Request__c</columns>
        <columns>Overall_Problem_Resolve_Process__c</columns>
        <columns>Overall_QoS__c</columns>
        <columns>Overall_Scheduling_Process__c</columns>
        <columns>Rate_your_Technician_Vendor__c</columns>
        <columns>Recommend_Friends_and_Family__c</columns>
        <columns>Additional_Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Resident_Email__c</columns>
        <columns>Resident_First_Name__c</columns>
        <columns>Resident_Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Does_Mgmt_need_to_contact_you__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Service Reqs: Must Contact Requestor</label>
    </listViews>
    <nameField>
        <displayFormat>SRSurv-{000000}</displayFormat>
        <label>Service Request Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>